// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test of HomePage to prevent unintentional changes 1`] = `
<div
  className="background-with-logo-image home-layout"
>
  <div
    className="med-list-selection"
  >
    
  </div>
  <div
    className="title"
  >
    <div
      className="font-very-large"
    >
      Med Reminder
    </div>
    <div
      className="font-large"
    >
      Todays Meds:
    </div>
  </div>
  <div
    className="med-list-container flex-container flex-justify-content-space-evenly"
  >
    loading...
  </div>
  <div
    className="button-container flex-container flex-justify-content-end"
  >
    <a
      className="link-button font-small"
      href="/manage"
      onClick={[Function]}
    >
      Edit your medication list
    </a>
  </div>
  <nav
    className="nav-bar"
  >
    <a
      className="font-medium"
      href="/home"
      onClick={[Function]}
    >
      Reminders
    </a>
    <a
      className="font-medium"
      href="/home"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
        />
      </svg>
    </a>
    <a
      className="font-medium"
      href="/account"
      onClick={[Function]}
    >
      Profile
    </a>
  </nav>
</div>
`;

exports[`snapshot test of MedList to prevent unintentional changes 1`] = `
<div
  className="med-list-container flex-container flex-justify-content-space-evenly"
>
  loading...
</div>
`;

exports[`snapshot test of MedListItem to prevent unintentional changes 1`] = `
<div
  className="med-list-entry-container font-medium"
>
  01:00
  <button
    className="med-list-entry-box font-small background-grey"
  >
    <span>
      abc
    </span>
    <span>
      Qty: 123
    </span>
    <input
      checked={true}
      className="check-box"
      type="checkbox"
      value=""
    />
  </button>
</div>
`;

exports[`snapshot test of MedListItem to prevent unintentional changes 2`] = `
<div
  className="med-list-entry-container font-medium"
>
  12:34
  <button
    className="med-list-entry-box font-small background-blue"
  >
    <span>
      e9rtjqn32knto34ijy
    </span>
    <span>
      Qty: 999
    </span>
    <input
      checked={false}
      className="check-box"
      type="checkbox"
      value=""
    />
  </button>
</div>
`;

exports[`snapshot test of MedListSelection to prevent unintentional changes 1`] = `
<div
  className="med-list-selection"
>
  
</div>
`;
